--- a/client/package.json
+++ b/client/package.json
@@ -133,7 +133,6 @@
     "formik": "2.2.6",
     "graphiql": "1.2.0",
     "graphql": "15.4.0",
-    "hopscotch": "0.3.1",
     "html-react-parser": "0.14.3",
     "jsonpath-plus": "4.0.0",
     "leaflet": "1.6.0",
@@ -157,6 +156,7 @@
     "react-confirm-bootstrap": "5.3.1",
     "react-container-dimensions": "1.4.1",
     "react-dom": "16.14.0",
+    "react-joyride": "2.3.0",
     "react-moment-proptypes": "1.7.0",
     "react-mosaic-component": "3.2.0",
     "react-notification-badge": "1.5.1",
