NCI-Agency/anet#3085: Rename defaultFormat to format

--- a/anet-dictionary.yml
+++ b/anet-dictionary.yml
@@ -475,7 +475,7 @@ fields:
             visibleWhen: $[?(@.colourOptions === 'GREEN')]
 
     location:
-      defaultFormat: LAT_LON
+      format: LAT_LON
 
     position:
       name: 'Position Name'
