--- a/anet-dictionary.yml
+++ b/anet-dictionary.yml
@@ -395,6 +395,7 @@ fields:
         app6Modifier: K
     gender: Gender
     endOfTourDate: End of tour
+    biography: Biography
     customFields:
       multipleButtons:
         type: enumset
