--- a/anet-dictionary.yml
+++ b/anet-dictionary.yml
@@ -476,26 +476,7 @@ fields:
             label: Object date
             helpText: Help text for object date field
             visibleWhen: $[?(@.colourOptions === 'GREEN')]
-    # number of fields after Avatar in the left column for Person
-    numberOfFieldsInLeftColumn: 6
-    showPageOrderedFields:
-      - domainUsername
-      - emailAddress
-      - multipleButtons
-      - inputFieldName
-      - phoneNumber
-      - country
-      - colourOptions
-      - textareaFieldName
-      - code
-      - rank
-      - numberFieldName
-      - nlt
-      - nlt_dt
-      - gender
-      - endOfTourDate
-      - biography
-      - arrayFieldName
+
 
   location:
     format: LAT_LON
@@ -748,7 +729,26 @@ fields:
       countries: [Albania , Armenia, Australia, Austria, Azerbaijan, Belgium, Bosnia-Herzegovina, Bulgaria, Croatia, Czech Republic, Denmark, Estonia, Finland,
                   Georgia, Germany, Greece, Hungary, Iceland, Italy, Latvia, Lithuania, Luxembourg, Macedonia, Mongolia, Montenegro, Netherlands, New Zealand,
                   Norway, Poland, Portugal, Romania, Slovakia, Slovenia, Spain, Sweden, Turkey, Ukraine, United Kingdom, United States of America]
-
+      # number of fields after Avatar in the left column for Person
+      numberOfFieldsInLeftColumn: 6
+      showPageOrderedFields:
+        - domainUsername
+        - emailAddress
+        - multipleButtons
+        - inputFieldName
+        - phoneNumber
+        - country
+        - colourOptions
+        - textareaFieldName
+        - code
+        - rank
+        - numberFieldName
+        - nlt
+        - nlt_dt
+        - gender
+        - endOfTourDate
+        - biography
+        - arrayFieldName
     position:
       name: NATO Billet
       type: ANET User
@@ -863,6 +863,27 @@ fields:
                   label: 👍
                   color: '#0000ff'
 
+      # number of fields after Avatar in the left column for Person
+      # Select the number so that the two columns are balanced in production
+      numberOfFieldsInLeftColumn: 6
+      showPageOrderedFields:
+        - phoneNumber
+        - country
+        - colourOptions
+        - textareaFieldName
+        - domainUsername
+        - emailAddress
+        - multipleButtons
+        - inputFieldName
+        - code
+        - rank
+        - numberFieldName
+        - nlt
+        - nlt_dt
+        - gender
+        - endOfTourDate
+        - biography
+        - arrayFieldName
     position:
       name: Afghan Tashkil
       type: Afghan Partner
