NCI-Agency/anet#3235: Mix previous positions field with other person fields
Add new dictionary field for person

Also fix tests that would break

--- a/anet-dictionary.yml
+++ b/anet-dictionary.yml
@@ -329,6 +329,7 @@ fields:
     lastName: Last name
     domainUsername: Domain username
     position: Current Position
+    prevPositions: Previous Positions
     emailAddress:
       label: Email
       placeholder: Only the following email domain names are allowed. ( example.com, cmil.mil, mission.ita, nato.int, *.isaf.nato.int )
@@ -734,6 +735,7 @@ fields:
       numberOfFieldsInLeftColumn: 6
       showPageOrderedFields:
         - position
+        - prevPositions
         - domainUsername
         - emailAddress
         - multipleButtons
@@ -870,6 +872,7 @@ fields:
       numberOfFieldsInLeftColumn: 6
       showPageOrderedFields:
         - position
+        - prevPositions
         - phoneNumber
         - country
         - colourOptions
