--- a/anet-dictionary.yml
+++ b/anet-dictionary.yml
@@ -495,8 +495,10 @@ fields:
       countries: [Albania , Armenia, Australia, Austria, Azerbaijan, Belgium, Bosnia-Herzegovina, Bulgaria, Croatia, Czech Republic, Denmark, Estonia, Finland,
                   Georgia, Germany, Greece, Hungary, Iceland, Italy, Latvia, Lithuania, Luxembourg, Macedonia, Mongolia, Montenegro, Netherlands, New Zealand,
                   Norway, Poland, Portugal, Romania, Slovakia, Slovenia, Spain, Sweden, Turkey, Ukraine, United Kingdom, United States of America]
-      # number of fields after Avatar in the left column for Person
+      # number of fields after Avatar in the left column for advisors
+      # adjust this number if two columns are not balanced on the Person Page
       numberOfFieldsInLeftColumn: 6
+      # select and order person fields (including custom fields)
       showPageOrderedFields:
         - position
         - prevPositions
@@ -638,9 +640,10 @@ fields:
                 "3":
                   label: high
                   color: '#ff8279'
-      # number of fields after Avatar in the left column for Person
-      # Select the number so that the two columns are balanced in production
+      # number of fields after Avatar in the left column for advisors
+      # adjust this number if two columns are not balanced on the Person Page
       numberOfFieldsInLeftColumn: 6
+      # select and order person fields (including custom fields)
       showPageOrderedFields:
         - position
         - prevPositions
