--- a/.github/workflows/build-gradle.yml
+++ b/.github/workflows/build-gradle.yml
@@ -16,15 +16,6 @@ jobs:
       NODE_OPTIONS: '--max-old-space-size=8192'
 
     steps:
-    - name: Notify slack start
-      id: slack
-      env:
-        SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
-      uses: voxmedia/github-action-slack-notify-build@v1
-      with:
-        channel: anet-notifications
-        status: STARTED
-        color: warning
     - uses: actions/checkout@v2
       with:
         fetch-depth: 0
@@ -59,23 +50,12 @@ jobs:
           ${{ runner.os }}-yarn-
     - run: ./gradlew jar
     - run: ./gradlew yarn_run_lint
-    - name: Notify slack success
-      if: success()
-      env:
-        SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
-      uses: voxmedia/github-action-slack-notify-build@v1
-      with:
-        message_id: ${{ steps.slack.outputs.message_id }}
-        channel: anet-notifications
-        status: SUCCEEDED
-        color: good
     - name: Notify slack failure
       if: failure()
       env:
         SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
       uses: voxmedia/github-action-slack-notify-build@v1
       with:
-        message_id: ${{ steps.slack.outputs.message_id }}
         channel: anet-notifications
         status: FAILED
         color: danger
@@ -102,15 +82,6 @@ jobs:
       CLIENT_TESTS: ${{ matrix.dictionary.CLIENT_TESTS }}
 
     steps:
-    - name: Notify slack start
-      id: slack
-      env:
-        SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
-      uses: voxmedia/github-action-slack-notify-build@v1
-      with:
-        channel: anet-notifications
-        status: STARTED
-        color: warning
     - uses: actions/checkout@v2
       with:
         fetch-depth: 0
@@ -171,23 +142,28 @@ jobs:
         NODE_OPTIONS: '--max-old-space-size=8192 --throw-deprecation'
     - run: head -1000 logs/clientLog.log
       if: always()
-    - name: Notify slack success
-      if: success()
-      env:
-        SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
-      uses: voxmedia/github-action-slack-notify-build@v1
-      with:
-        message_id: ${{ steps.slack.outputs.message_id }}
-        channel: anet-notifications
-        status: SUCCEEDED
-        color: good
     - name: Notify slack failure
       if: failure()
       env:
         SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
       uses: voxmedia/github-action-slack-notify-build@v1
       with:
-        message_id: ${{ steps.slack.outputs.message_id }}
         channel: anet-notifications
         status: FAILED
         color: danger
+
+  notify:
+    needs: test
+    runs-on: ubuntu-latest
+    env:
+      NODE_OPTIONS: '--max-old-space-size=8192'
+    steps:
+    - name: Notify success for all
+      if: success()
+      env:
+        SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
+      uses: voxmedia/github-action-slack-notify-build@v1
+      with:
+        channel: anet-notifications
+        status: SUCCEEDED
+        color: good
