NCI-Agency/anet#106: Show similar named people in a popover
So that we avoid duplicate people when creating a person

--- a/client/package.json
+++ b/client/package.json
@@ -135,6 +135,7 @@
     "graphql": "15.4.0",
     "hopscotch": "0.3.1",
     "html-react-parser": "1.1.1",
+    "js-levenshtein": "1.1.6",
     "jsonpath-plus": "4.0.0",
     "leaflet": "1.6.0",
     "leaflet-defaulticon-compatibility": "0.1.1",
