--- a/client/package.json
+++ b/client/package.json
@@ -3,13 +3,13 @@
   "version": "0.1.0",
   "private": "true",
   "homepage": "/assets/client",
-
   "scripts": {
     "dev": "NODE_ENV=development webpack --config config/webpack.dev.js",
     "prod": "NODE_ENV=production webpack --config config/webpack.prod.js",
     "start": "NODE_ENV=development webpack serve --config config/webpack.dev.js",
     "lint-fix": "prettier --write 'config/**/*.js' 'platform/**/*.js' 'src/**/*.js' && NODE_ENV=development eslint --fix 'config/**/*.js' 'platform/**/*.js' 'src/**/*.js'",
-    "jest": "NODE_ENV=test jest --testPathPattern='tests/unitTests'"
+    "jest": "NODE_ENV=test jest --testPathPattern='tests/unitTests'",
+    "wdio": "SERVER_URL='http://localhost:3000' wdio ./config/wdio.config.js"
   },
   "dependencies": {
     "bootstrap": "4.6.0",
@@ -51,11 +51,11 @@
     "@testing-library/jest-dom": "5.11.9",
     "@testing-library/react": "11.2.5",
     "@wdio/browserstack-service": "6.12.1",
-    "@wdio/cli": "6.12.1",
-    "@wdio/local-runner": "6.12.1",
-    "@wdio/mocha-framework": "6.11.0",
-    "@wdio/spec-reporter": "6.11.0",
-    "@wdio/sync": "6.11.0",
+    "@wdio/cli": "7.0.1",
+    "@wdio/local-runner": "7.0.1",
+    "@wdio/mocha-framework": "7.0.0",
+    "@wdio/spec-reporter": "7.0.1",
+    "@wdio/sync": "7.0.1",
     "autoprefixer": "10.2.4",
     "babel-jest": "26.6.3",
     "babel-loader": "8.2.2",
@@ -199,7 +199,10 @@
       "react-hooks",
       "standard"
     ],
-    "ignorePatterns": ["**/build/*.js", "**/dist/*.js"],
+    "ignorePatterns": [
+      "**/build/*.js",
+      "**/dist/*.js"
+    ],
     "rules": {
       "react/jsx-uses-react": "off",
       "react/react-in-jsx-scope": "off",
