--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,8 @@
     "start": "NODE_ENV=development webpack serve --config config/webpack.dev.js",
     "lint-fix": "prettier --write 'config/**/*.js' 'platform/**/*.js' 'src/**/*.js' && NODE_ENV=development eslint --fix 'config/**/*.js' 'platform/**/*.js' 'src/**/*.js'",
     "jest": "NODE_ENV=test jest --testPathPattern='tests/unitTests'",
-    "wdio": "SERVER_URL='http://localhost:3000' wdio ./config/wdio.config.js"
+    "wdio": "SERVER_URL='http://localhost:3000' wdio ./config/wdio.config.js",
+    "test-all": "yarn run jest && yarn run wdio"
   },
   "dependencies": {
     "bootstrap": "4.6.0",
